<resources>
    <string name="type">Choose user</string>
    <string name="app_name">TruckTrip</string>
    <string name="update">Update Data</string>
    <string name="registrar">Registration</string>
    <string name="password">Password</string>
    <string name="email_or_user">Email</string>
    <string name="google_web_id">Google Button</string>
    <string name="pr">co.edu.unipiloto.trucktrip.PREFERENCE_FILE_KEY</string>
    <string name="proveedor">Proveedor</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>

    <string-array name="user_type">
        <item>Conductor</item>
        <item>Propietario De Camion</item>
        <item>Propietario De Carga</item>
    </string-array>
    <string-array name="status_lodaout">
        <item>avaible</item>
        <item>in trip</item>
        <item>delivered</item>
    </string-array>

    <string-array name="loads">

    </string-array>
    <string name="title_activity_location_activity">LocationActivityActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="statuslodaout">Accept</string>


</resources>