<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/idSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/user_type"
            android:hint="@string/type"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/lastnameText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Last Name"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/emailtextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/provedortextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/proveedor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/cedulaText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Identificacion"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Phone"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Address"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/guardarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cerrarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cerrar sesión" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>